@startuml

package com.hellokoding.auth {
  class WebSecurityConfig {
    -userDetailsService : UserDetailsService
    +bCryptPasswordEncoder() : BCryptPasswordEncoder
    +configure() : void
    +configureGlobal() : void
  }
  class WebApplication {
    +configure() : SpringApplicationBuilder
    +main() : void
  }
}

package com.hellokoding.auth.model {
  class User <<Entity>> {
    -id : Long
    -username : String
    -password : String
    -passwordConfirm : String
    -roles : Set<Role>
    +getId() : Long
    +setId() : void
    +getUsername() : String
    +setUsername() : void
    +getPassword() : String
    +setPassword() : void
    +getPasswordConfirm() : String
    +setPasswordConfirm() : void
  }
  class Role <<Entity>> {
    -id : Long
    -name : String
    -users : Set<User>
    +getId() : Long
    +setId() : void
    +getName() : String
    +setName() : void
    +getUsers() : Set<User>
    +setUsers() : void
  }
}

package com.hellokoding.auth.repository {
  interface RoleRepository {
  }
  interface UserRepository {
  }
}

package com.hellokoding.auth.service {
  interface UserService {
  }
  interface SecurityService {
  }
  class SecurityServiceImpl <<Service>> {
    -authenticationManager : AuthenticationManager
    -userDetailsService : UserDetailsService
    -logger : Logger
    +findLoggedInUsername() : String
    +autologin() : void
  }
  class UserServiceImpl <<Service>> {
    -userRepository : UserRepository
    -roleRepository : RoleRepository
    -bCryptPasswordEncoder : BCryptPasswordEncoder
    +save() : void
    +findByUsername() : User
  }
  class UserDetailsServiceImpl <<Service>> {
    -userRepository : UserRepository
    +loadUserByUsername() : UserDetails
  }
}

package com.hellokoding.auth.validator {
  class UserValidator {
    -userService : UserService
    +supports() : boolean
    +validate() : void
  }
}

package com.hellokoding.auth.web {
  class UserController <<Controller>> {
    -userService : UserService
    -securityService : SecurityService
    -userValidator : UserValidator
    +registration() : String
    +registration() : String
    +login() : String
    +welcome() : String
  }
}

' --- Relatii ---
RoleRepository --> Role
UserRepository --> User
UserValidator --> User
UserValidator --> UserService
UserController --> User
UserController --> SecurityService
UserController --> UserService
UserController --> UserValidator
UserService --> User
SecurityServiceImpl ..|> SecurityService
UserServiceImpl ..|> UserService
UserServiceImpl --> User
UserServiceImpl --> RoleRepository
UserServiceImpl --> UserRepository
UserDetailsServiceImpl --> Role
UserDetailsServiceImpl --> User
UserDetailsServiceImpl --> UserRepository

@enduml